--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Revision history for Perl module Tree::DAG_Node.
 	- Rework Makefile.PL so File::Spec, File::Temp, Test::More and Test::Pod are in TEST_REQUIRES.
 		Many thanx to Kent Fredric in RT#112568 for this suggestion.
 	- Expand the SYNOPSIS.
+	- Update MANIFEST.SKIP to include .gitignore.
 
 1.27  2015-07-12T11:01:00
 	- Remove the line which reads 'use open qw(:std :utf8);'. As Tom Molesworth says:
