--- a/Changes
+++ b/Changes
@@ -2,7 +2,8 @@ Revision history for Perl module Tree::DAG_Node.
 
 1.31  2018-02-14T09:08:00
 	- Clarify licence issue by changing the reference in the DAG_Node.pm file from Artistic V 2
-		to Perl, so it now matches what is in Makefile.PL and the LICENSE file.
+		to Perl, so it now matches what I preemptively put in Makefile.PL and the LICENSE file.
+		Sean Burke has kindly agreed to this change.
 		$thanx x $many to Gregor Herrmann (Debian Perl Group) for reporting this via github.
 
 1.30  2018-01-26T15:32:00
